# dk-harness

./: .npmignore  AGENTS.md  ARCHITECTURE.md  README.md  justfile  package-lock.json  package.json
.github/workflows/: docs-ci.yml  npm-publish.yml  package-publish.yml  repo-ci.yml  scaffold-eval.yml  templates-ci.yml
docs/: CI.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELEASE.md  RELIABILITY.md
docs/exec-plans/: repeated-work.md
docs/product-specs/: new-user-onboarding.md
scaffolds/presets/: next-2x-fastapi-monorepo.json  next-fastapi-axum-monorepo.json  next-fastapi-monorepo.json  next-nextjs-api-monorepo.json  package-nextjs-ui-kit.json
scripts/: docs-check.mjs  generate-scaffolds.mjs  release-pack-check.mjs  repo-self-check.mjs  repo-supply-chain.mjs  scaffold-eval.mjs
templates/: registry.json
templates/modules/backend-fastapi/: module.json
templates/modules/backend-nextjs/: module.json
templates/modules/package-nextjs/: module.json
templates/next-axum-monorepo/: .gitignore  .npmignore  AGENTS.md  justfile  package.json
templates/next-axum-monorepo/docs/: RELIABILITY.md  architecture.md  build.md  conventions.md
templates/next-axum-monorepo/scripts/: check-rust-layers.mjs  knowledge-base.mjs
templates/next-fastapi-monorepo/: .gitignore  .npmignore  AGENTS.md  README.md  justfile  package.json
templates/next-fastapi-monorepo/apps/api/: README.md  package.json  pyproject.toml
templates/next-fastapi-monorepo/apps/api/app/: main.py
templates/next-monorepo/: AGENTS.md  justfile  pnpm-lock.yaml
(+41 files in other folders)
